<resources>
    <string name="app_name">Food Cart</string>
    <string name="preference_file_name">User Preferences</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="ok">Ok</string>
    <string name="enter_your_registered_email_and_mobile_number_below">Enter your Registered Email and Mobile Number below.</string>
    <string name="next">Next</string>
    <string name="enter_the_received_otp_below">Enter the Received OTP Below:</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_6_characters">New Password (Min. 6 characters)</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="place_order">Place Order</string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_6_characters">Password (Min. 6 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="food_cart">Food Cart</string>
    <string name="guest">Guest</string>
    <string name="_0123456789">0123456789</string>
    <string name="you_do_not_have_any_favourite_restaurants">You do not have any favourite restaurants</string>
    <string name="you_haven_t_placed_any_orders_yet">You haven\'t placed any orders yet</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="designed_by_sidhant_bidaliya">Designed by Sidhant Bidaliya</string>
    <string name="logout">Logout</string>
    <string name="question">Question?</string>
    <string name="answer">Answer.</string>
    <string name="dish_name">Dish Name</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="total_cost">Total Cost</string>
    <string name="cost_for_one">Cost for one</string>
    <string name="_4_5">4.5</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="dish_cost">Dish Cost</string>
    <string name="add">Add</string>
</resources>

