<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10_digits"
        android:layout_margin="20dp"
        android:layout_below="@+id/imgAppLogo"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_smartphone_call"
        android:drawablePadding="5dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/etMobileNo"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/ic_key_fill_black"
        android:drawablePadding="5dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/etPassword"
        android:background="@drawable/basic_custom_button"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_below="@id/btnLogin"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/r8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>