<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/offWhite"
    tools:context=".activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgAppLogo1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_man"
            android:drawablePadding="10dp"
            android:hint="@string/name_min_3_characters" />

        <EditText
            android:id="@+id/etEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:hint="@string/email_address"
            android:inputType="textWebEmailAddress"/>

        <EditText
            android:id="@+id/etContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEMail"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_smartphone_call"
            android:drawablePadding="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="phone"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etContactNo"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_placeholder"
            android:drawablePadding="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:hint="@string/delivery_address"/>

        <EditText
            android:id="@+id/etPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_key_fill_black"
            android:drawablePadding="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:hint="@string/password_min_6_characters"
            android:inputType="numberPassword"/>

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassWord"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_key_fill_black"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="numberPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPass"
            android:layout_margin="20dp"
            android:background="@drawable/basic_custom_button"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </RelativeLayout>

</ScrollView>
