<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/llContent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/txtDishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textSize= "18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtDishCpp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDishName"
                android:text="@string/dish_cost"
                android:drawableStart="@drawable/ic_rupee_black"
                android:textColor="@color/black"
                android:textSize= "18sp"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/add"
                android:background="@drawable/basic_custom_button"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/llContent1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>